Credentials are moved to env variables in maven example

--- a/examples/gradle/build.gradle
+++ b/examples/gradle/build.gradle
@@ -10,8 +10,8 @@ repositories {
     maven {
         url = uri("https://nexus-repo.corp.cloudlinux.com/repository/els_spring")
         credentials {
-            username = findProperty('YOUR_USERNAME')
-            password = findProperty('YOUR_PASSWORD')
+            username = findProperty('USERNAME')
+            password = findProperty('PASSWORD')
         }
     }
 }
